# study-DA

./: .gitignore  .gitmodules  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci_docs.yaml  ci_tests.yaml
docs/: contributing.md  getting_started.md  index.md  installation.md  references.md  why_this_package.md
docs/case_studies/: 1_simple_collider.md  2_tune_scan.md  3_octupole_scan_diagonal.md  4_3D_scan.md  5_1_generational_scan.md  6_3_generational_scan.md  7_tracking_with_GPU.md  8_customizing_internal_code.md  index.md  simple_collider.md
docs/installation/: installing_locally.md  installing_python.md  installing_the_optics.md  installing_with_pip.md  using_HPC_clusters.md
docs/template_files/: index.md
docs/tutorials/: index.md
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/case_studies/: index.html  simple_collider.html
site/reference/: SUMMARY.html
site/search/: search_index.js  search_index.json
study_da/: __init__.py  configuration.py  distribution.py  generate.py  mad_collider.py  scheme_utils.py  study_da.py  xsuite_collider.py  xsuite_leveling.py  xsuite_tracking.py
study_da/analysis/: analysis_functions_TODO.py  example_notebook_TODO.ipynb
study_da/generate/: __init__.py  generate_scan.py  parameter_space.py
study_da/hllhc13/: __init__.py  optics_specific_tools.py  orbit_correction.py
study_da/hllhc16/: __init__.py  optics_specific_tools.py  orbit_correction.py
study_da/master_classes/: configuration.py  mad_collider.py  particles_distribution.py  scheme_utils.py  xsuite_collider.py  xsuite_leveling.py  xsuite_tracking.py
study_da/plot/: __init__.py  build_title.py  plot_study.py
study_da/postprocess/: __init__.py  postprocess.py  postprocess_TODO.py
study_da/runIII/: __init__.py  optics_specific_tools.py  orbit_correction.py
study_da/runIII_ions/: __init__.py  optics_specific_tools.py
study_da/submit/: TODO.txt  __init__ copy.py  __init__.py  ask_user_config.py  config_jobs.py  dependency_graph.py  generate_run.py  study_sub.py  submit_scan.py
study_da/template_configurations/: config_dummy.yaml  config_hllhc13.yaml  config_hllhc16.yaml  config_runIII.yaml  config_runIII_ions.yaml
study_da/template_scripts/: generation_1.py  generation_1_dummy.py  generation_2_dummy.py  generation_2_level_by_nb.py  generation_2_level_by_sep.py
study_da/utils/: __init__.py  configuration.py  dic_utils.py  template_utils.py
tests/: __init__.py
tests/dummy/: config_scan.yaml  generate_study.py
tests/hllhc13/: generate_study.py
tests/hllhc16/: config_hllhc16.yaml  (+3 more)
(+297 files in other folders)
