[tool.poetry]
name = "study-da"
version = "0.1.0"
description = "A tool to create large-scale DA simulations."
authors = ["Colas <colasdroin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.2"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
cpymad = "^1.16.3"
ruamel-yaml = "^0.18.6"
jinja2 = "^3.1.4"
xsuite = "^0.16.6"
fastparquet = "^2024.5.0"
nafflib = "^2.0.2"
xmask = {path = "external_dependencies/xmask", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
