[tool.poetry]
name = "study-da"
version = "0.2.2"
description = "A tool to create large-scale DA simulations."
authors = ["Colas <colasdroin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.2"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
cpymad = "^1.16.3"
ruamel-yaml = "^0.18.6"
jinja2 = "^3.1.4"
xsuite = "^0.18.6"
fastparquet = "^2024.5.0"
nafflib = "^2.0.2"
filelock = "^3.16.1"
# Xmask commented out as external_dependencies are not supported by pypi
# xmask = {path = "external_dependencies/xmask", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
